# Project_Base

Insurance-Premium-Category-Predictor/: .dockerignore  Dockerfile  README.md  pyproject.toml  run_services.py
Insurance-Premium-Category-Predictor/model/: fastapi_ml_model.ipynb  retrain_model.py
