[project]
name = "insurance-premium-category-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0.0",
    "annotated-types>=0.6.0",
    "anyio>=4.0.0",
    "attrs>=23.1.0",
    "blinker>=1.7.0",
    "cachetools>=5.3.0",
    "certifi>=2024.2.2",
    "charset-normalizer>=3.3.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.109.0",
    "gitdb>=4.0.11",
    "gitpython>=3.1.40",
    "h11>=0.14.0",
    "idna>=3.6",
    "jinja2>=3.1.3",
    "joblib>=1.3.0",
    "jsonschema>=4.21.0",
    "jsonschema-specifications>=2023.12.1",
    "markupsafe>=2.1.0",
    "narwhals>=1.0.0",
    "numpy>=1.26.0",
    "packaging>=23.0",
    "pandas>=2.2.0",
    "pillow>=10.2.0",
    "protobuf>=4.25.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pydantic-core>=2.16.0",
    "pydeck>=0.8.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "referencing>=0.33.0",
    "requests>=2.31.0",
    "rpds-py>=0.17.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "six>=1.16.0",
    "smmap>=5.0.0",
    "sniffio>=1.3.0",
    "starlette>=0.36.0",
    "streamlit>=1.31.0",
    "tenacity>=8.2.0",
    "threadpoolctl>=3.2.0",
    "toml>=0.10.2",
    "tornado>=6.4",
    "typing-extensions>=4.9.0",
    "typing-inspection>=0.3.1",
    "tzdata>=2024.1",
    "urllib3>=2.2.0",
    "uvicorn>=0.27.0",
    "watchdog>=4.0.0",
]
